# difflex

./: .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README-ja.md  README.md  build_linux.sh  build_macos.zsh  build_windows.ps1  pyproject.toml
.github/: copilot-instructions.md
Documents/: pypiリリース方法.md  ファイル比較アプリ要件定義.md
src/difflex/: __init__.py  main.py
src/difflex/locales/: en-US.json  ja-JP.json
src/difflex/modules/: __init__.py  comparison_widget.py  comparison_worker.py  file_comparison_widget.py  history_dialog.py  home_widget.py  main_window.py  parallel_comparison_widget.py  settings_dialog.py  tree_comparison_widget.py
src/difflex/utils/: __init__.py  comparator.py  file_types.py  i18n.py  settings.py
